--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.19.1
 yarn_mappings=1.19.1+build.1
 loader_version=0.14.8
 # Mod Properties
-mod_version=2.0
+mod_version=2.0d
 maven_group=io.github.zemelua
 archives_base_name=umu_backpack_fabric
 # Dependencies
