--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,11 @@ minecraft_version=1.19.2
 yarn_mappings=1.19.2+build.8
 loader_version=0.14.9
 # Mod Properties
-mod_version=2.0d
+mod_version=3.1b
 maven_group=io.github.zemelua
 archives_base_name=umu_backpack
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.60.0+1.19.2
+
+minecraft_version_name=1.19.x
