--- a/build.gradle
+++ b/build.gradle
@@ -1,97 +1,77 @@
 plugins {
-    id 'fabric-loom' version '0.12-SNAPSHOT'
-    id 'maven-publish'
+	id('fabric-loom').version('0.12-SNAPSHOT')
+	id('maven-publish')
 }
 
-version = project.mod_version
-group = project.maven_group
+setVersion(project.mod_version)
+setGroup(project.maven_group)
 
 loom {
-    accessWidenerPath = file("src/main/resources/umu_backpack.accesswidener")
+	accessWidenerPath.set(file('src/main/resources/umu_backpack.accesswidener'))
 }
 
 repositories {
-    // Add repositories to retrieve artifacts from in here.
-    // You should only use this when depending on other mods because
-    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
-    // for more information about repositories.
-
-    maven {
-        name "Jitpack"
-        url "https://jitpack.io"
-    }
+	maven {
+		url('https://jitpack.io')
+	}
 }
 
 dependencies {
-    // To change the versions see the gradle.properties file
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	minecraft(group: 'com.mojang', name: 'minecraft', version: project.minecraft_version)
+	mappings(group: 'net.fabricmc', name: 'yarn', version: project.yarn_mappings, classifier: 'v2')
 
-    modImplementation include("com.github.Chocohead:fabric-asm:v2.3")
+	modImplementation(group: 'net.fabricmc', name: 'fabric-loader', version: project.loader_version)
+	modImplementation(group: 'net.fabricmc.fabric-api', name: 'fabric-api', version: project.fabric_version)
 
-    // Fabric API. This is technically optional, but you probably want it anyway.
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
+	modImplementation(include(group: 'com.github.Chocohead', name: 'fabric-asm', version: 'v2.3'))
 }
 
 processResources {
-    inputs.property "version", project.version
-    filteringCharset "UTF-8"
+	inputs.property "version", project.version
+	inputs.property "depends/minecraft", project.depends_minecraft_version
+	filteringCharset "UTF-8"
 
-    filesMatching("fabric.mod.json") {
-        expand "version": project.version
-    }
+	filesMatching("fabric.mod.json") {
+		expand "version": project.version
+		expand "depends/minecraft": project.depends_minecraft_version
+	}
 }
 
-def targetJavaVersion = 17
+Integer targetJavaVersion = 17
 tasks.withType(JavaCompile).configureEach {
-    // ensure that the encoding is set to UTF-8, no matter what the system default is
-    // this fixes some edge cases with special characters not displaying correctly
-    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-    // If Javadoc is generated, this must be specified in that task too.
-    it.options.encoding = "UTF-8"
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        it.options.release = targetJavaVersion
-    }
+	it.options.encoding = "UTF-8"
+
+	if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
+		it.options.getRelease().set(targetJavaVersion)
+	}
 }
 
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
-    archivesBaseName = project.archives_base_name
-    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-    // if it is present.
-    // If you remove this line, sources will not be generated.
-    withSourcesJar()
+	JavaVersion javaVersion = JavaVersion.toVersion(targetJavaVersion)
+	if (JavaVersion.current() < javaVersion) {
+		toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+	}
+	archivesBaseName = project.archives_base_name
+
+	withSourcesJar()
 }
 
 jar {
-    from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}" }
-    }
+	from("LICENSE") {
+		rename { "${it}_${project.archivesBaseName}" }
+	}
 }
 
 remapJar {
-    archiveFileName = "${project.archivesBaseName}-${project.version}-${project.minecraft_version_name}.jar"
+	archiveFileName = "${project.archivesBaseName}-${project.version}-${project.depends_minecraft_version}.jar"
 }
 
-// configure the maven publication
 publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-        }
-    }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
-        // Notice: This block does NOT have the same function as the block in the top level.
-        // The repositories here will be used for publishing your artifact, not for
-        // retrieving dependencies.
-    }
+	publications {
+		//noinspection GroovyAssignabilityCheck
+		mavenJava(MavenPublication) {
+			//noinspection GroovyAssignabilityCheck
+			from components.java
+		}
+	}
 }
