--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,13 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.8
-loader_version=0.14.9
-# Mod Properties
-mod_version=3.1b
-maven_group=io.github.zemelua
-archives_base_name=umu_backpack
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.60.0+1.19.2
+org.gradle.jvmargs     : -Xmx1G
 
-minecraft_version_name=1.19.x
+minecraft_version      : 1.19.2
+yarn_mappings          : 1.19.2+build.8
+
+loader_version         : 0.14.9
+fabric_version         : 0.60.0+1.19.2
+
+mod_version            : 3.1b
+maven_group            : io.github.zemelua
+archives_base_name     : umu_backpack
+
+depends_minecraft_version : 1.19.x
