バージョンアップ！(3.1)

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ yarn_mappings          : 1.19.2+build.8
 loader_version         : 0.14.9
 fabric_version         : 0.60.0+1.19.2
 
-mod_version            : 3.1b
+mod_version            : 3.1
 maven_group            : io.github.zemelua
 archives_base_name     : umu_backpack
 
