--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,16 @@
-org.gradle.jvmargs     : -Xmx1G
+org.gradle.jvmargs        : -Xmx1G
 
-minecraft_version      : 1.19.2
-yarn_mappings          : 1.19.2+build.8
+minecraft_version         : 1.19.2
+yarn_mappings             : 1.19.2+build.8
 
-loader_version         : 0.14.9
-fabric_version         : 0.60.0+1.19.2
+loader_version            : 0.14.9
+fabric_version            : 0.60.0+1.19.2
 
-mod_version            : 3.1
-maven_group            : io.github.zemelua
-archives_base_name     : umu_backpack
+modmenu_version           : 4.0.6
+umu_config_version        : v0.0-alpha2
+
+mod_version               : 3.1
+maven_group               : io.github.zemelua
+archives_base_name        : umu_backpack
 
 depends_minecraft_version : 1.19.x
