コンフィグを実装

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ loader_version            : 0.14.9
 fabric_version            : 0.60.0+1.19.2
 
 modmenu_version           : 4.0.6
-umu_config_version        : v0.0-alpha2
+umu_config_version        : 0.0-alpha3
 
 mod_version               : 3.1
 maven_group               : io.github.zemelua
