--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 org.gradle.jvmargs        : -Xmx1G
 
-minecraft_version         : 1.19.2
-yarn_mappings             : 1.19.2+build.8
+minecraft_version         : 1.18.2
+yarn_mappings             : 1.18.2+build.4
 
 loader_version            : 0.14.9
-fabric_version            : 0.60.0+1.19.2
+fabric_version            : 0.59.1+1.18.2
 
-modmenu_version           : 4.0.6
+modmenu_version           : 3.2.4
 umu_config_version        : 0.0-alpha3
 
 mod_version               : 3.1
 maven_group               : io.github.zemelua
 archives_base_name        : umu_backpack
 
-depends_minecraft_version : 1.19.x
+depends_minecraft_version : 1.18.2
