--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 org.gradle.jvmargs        : -Xmx1G
 
-minecraft_version         : 1.19.2
-yarn_mappings             : 1.19.2+build.8
+minecraft_version         : 1.20
+yarn_mappings             : 1.20+build.1
 
-loader_version            : 0.14.9
-fabric_version            : 0.60.0+1.19.2
+loader_version            : 0.14.21
+fabric_version            : 0.83.0+1.20
 
-modmenu_version           : 4.0.6
-umu_config_version        : 0.0-alpha3
+modmenu_version           : 7.0.1
+umu_config_version        : -SNAPSHOT
 
-mod_version               : 3.1
+mod_version               : 4.1
 maven_group               : io.github.zemelua
 archives_base_name        : umu_backpack
 
-depends_minecraft_version : 1.19.x
+depends_minecraft_version : 1.20
