--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ fabric_version            : 0.83.0+1.20
 modmenu_version           : 7.0.1
 umu_config_version        : -SNAPSHOT
 
-mod_version               : 4.1
+mod_version               : 4.1b
 maven_group               : io.github.zemelua
 archives_base_name        : umu_backpack
 
