MODバージョンを調整

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ fabric_version            : 0.86.1+1.20.1
 modmenu_version           : 7.2.1
 umu_config_version        : -SNAPSHOT
 
-mod_version               : 5.1b
+mod_version               : 5.1
 maven_group               : io.github.zemelua
 archives_base_name        : umu_backpack
 
