Modrinthにpublishするためのgradleタスクを追加

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id('fabric-loom').version('1.3-SNAPSHOT')
 	id('maven-publish')
+	id "com.modrinth.minotaur" version "2.+"
 }
 
 setVersion(project.mod_version)
@@ -63,6 +64,22 @@ jar {
 
 remapJar {
 	archiveFileName = "${project.archivesBaseName}-${project.version}-${project.minecraft_version}.jar"
+}
+
+import com.modrinth.minotaur.dependencies.ModDependency
+
+modrinth {
+	token = System.getenv("TOKEN")
+	projectId = "aPpO2lOR"
+	versionName = "UMU Backpack 6.1"
+	versionNumber = "6.1"
+	uploadFile = remapJar
+	gameVersions = ["1.20.2"]
+	loaders = ["fabric"]
+	dependencies = [
+			new ModDependency('P7dR8mSH', 'required'),
+			new ModDependency('mOgUt4GM', 'required')
+	]
 }
 
 publishing {
