--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,18 @@
-org.gradle.jvmargs        : -Xmx1G
+org.gradle.jvmargs=-Xmx1G
 
-minecraft_version         : 1.20.2
-yarn_mappings             : 1.20.2+build.4
+# Fabric Properties
+    minecraft_version=1.20.2
+    yarn_mappings=1.20.2+build.4
+    loader_version=0.14.23
 
-loader_version            : 0.14.23
-fabric_version            : 0.90.0+1.20.2
 
-modmenu_version           : 8.0.0
-umu_config_version        : -SNAPSHOT
+# Mod Properties
+    mod_version=6.1
+    maven_group=io.github.zemelua
+    archives_base_name=umu_backpack
 
-mod_version               : 6.1
-maven_group               : io.github.zemelua
-archives_base_name        : umu_backpack
+#Dependencies
+    fabric_version=0.90.0+1.20.2
+    modmenu_version=8.0.0
+    umu_config_version=1.0
+
