--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,6 @@ org.gradle.jvmargs=-Xmx1G
 #Dependencies
     fabric_version=0.91.3+1.20.4
     modmenu_version=9.0.0
-    umu_config_version=1.0
+    umu_config_version=2.0
+    cloth_config_version=13.0.121
 
